--- a/edit_supplier.html
+++ b/edit_supplier.html
@@ -68,7 +68,7 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <th>ملاحظات عن العامل</th>
+                                            <th>ملاحظات عن التاجر</th>
                                             <td><textarea id="note" class="form-control"></textarea>
                                             </td>
                                         </tr>
