--- a/main.html
+++ b/main.html
@@ -116,7 +116,7 @@
                                     
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div class="huge">الورشة</div>
+                                    <div class="huge">المشغل</div>
                                     <div></div>
                                 </div>
                             </div>
