--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -87,6 +87,22 @@
                                     <tr>
                                         <th>النوع</th>
                                         <td><select id="type" class="form-control" onchange="onChangeType()">
+                                            
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                            <option value="7">7</option>
+                                            <option value="110*2">110*2</option>
+                                            <option value="1*2">1*2</option>
+                                            <option value="2*3">2*3</option>
+                                            <option value="3*4">3*4</option>
+                                            <option value="S">S</option>
+                                            <option value="٣ سنوات">٣ سنوات</option>
+                                            <option value="٦ سنوات">٦ سنوات</option>
+                                            <option value="٩ سنوات">٩ سنوات</option>
 
                                             </select>
                                         </td>
@@ -108,6 +124,25 @@
                                             <input id="price" onchange="onChange()" type="number"
                                                 class="form-control"></textarea>
                                         </td>
+                                    </tr>
+                                    <tr>
+                                        <th>10%</th>
+                                        <td>
+                                            <input class="form-check-input" type="checkbox" class="form-control"></checkbox>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>20%</th>
+                                        <td>
+                                            <input class="form-check-input" type="checkbox" class="form-control"></checkbox>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>المقاس</th>
+                                        <td><select  class="form-control">
+
+                                        </select>
+                                    </td>
                                     </tr>
                                     <tr>
                                         <th> الاجمالى</th>
@@ -156,6 +191,9 @@
                                         <th>النوع</th>
                                         <th>اللون</th>
                                         <th>السعر</th>
+                                        <th>10%</th>
+                                        <th>20%</th>
+                                        <th>المقاس</th>
                                         <th>الاجمالى</th>
                                         <th>خيارات</th>
                                     </tr>
