--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -114,13 +114,13 @@
                                     <tr>
                                         <th>10% فرق مقاس</th>
                                         <td>
-                                            <input class="form-check-input" type="checkbox" class="form-control"></checkbox>
+                                            <input class="form-check-input" type="checkbox" class="form-control" id="ten"></checkbox>
                                         </td>
                                     </tr>
                                     <tr>
                                         <th>20% خدمه تفصيل</th>
                                         <td>
-                                            <input class="form-check-input" type="checkbox" class="form-control"></checkbox>
+                                            <input class="form-check-input" type="checkbox" class="form-control" id="twenty"></checkbox>
                                         </td>
                                     </tr>
                                     <tr>
@@ -201,7 +201,7 @@
                                 </thead>
                                 <tbody id="Customdata">
 
-                                    <td colspan="7" class='app-spinner' style="text-align: center"><i
+                                    <td colspan="9" class='app-spinner' style="text-align: center"><i
                                             class="fa fa-spinner fa-spin" style="font-size:24px"></i></td>
 
                                 </tbody>
@@ -337,6 +337,7 @@
         }
 
         function save_for_salem() {
+            
             var total = document.getElementById("total").value
             if (total > 0) {
                 var count = document.getElementById("count").value
@@ -346,12 +347,24 @@
                 var type = document.getElementById("type").options[document.getElementById("type").selectedIndex].text
                 var color = document.getElementById("color").value
 
+                var ten = 0
+                if(document.getElementById("ten").checked){
+                    ten = ((count * price) * 10 ) / 100
+                }
+
+                var twenty = 0
+                if(document.getElementById("twenty").checked){
+                    twenty = ((count * price) * 20 ) / 100
+                }
+
                 database.ref().child('sendto').child(key).child(date).push().set({
                     total: total,
                     count: count,
                     date: date,
                     price: price,
                     by: by,
+                    ten: ten,
+                    twenty: twenty,
                     type: type,
                     color: color,
                 }, function (error) {
