--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -100,7 +100,7 @@
                                     </tr>
                                   
                                     <tr>
-                                        <th>اللون</th>
+                                        <th>اللون / الاسم</th>
                                         <td><input id="color" class="form-control"></textarea></td>
 
                                     </tr>
@@ -125,7 +125,8 @@
                                     </tr>
                                     <tr>
                                         <th>المقاس</th>
-                                        <td><select id="size"  class="form-control">
+                                        <td><input id="size" class="form-control"></textarea></td>
+                                        <!-- <td><select id="size"  class="form-control">
                                             <option value="1">1</option>
                                             <option value="2">2</option>
                                             <option value="3">3</option>
@@ -141,7 +142,7 @@
                                             <option value="٣ سنوات">٣ سنوات</option>
                                             <option value="٦ سنوات">٦ سنوات</option>
                                             <option value="٩ سنوات">٩ سنوات</option>
-                                        </select>
+                                        </select> -->
                                     </td>
                                     </tr>
                                     <tr>
@@ -189,7 +190,7 @@
                                         <th hidden>التاريخ</th>
                                         <th>العدد</th>
                                         <th>النوع</th>
-                                        <th>اللون</th>
+                                        <th>اللون / الاسم</th>
                                         <th>السعر</th>
                                         <th>10%</th>
                                         <th>20%</th>
