--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -352,12 +352,16 @@
                 if(document.getElementById("ten").checked){
                     ten = (total * 10 ) / 100
                     document.getElementById("tenValue").innerHTML = ten
+                }else {
+                    document.getElementById("tenValue").innerHTML = ""
                 }
 
                 var twenty = 0
                 if(document.getElementById("twenty").checked){
                     twenty = (total * 20 ) / 100
                     document.getElementById("twentyValue").innerHTML = twenty
+                }else {
+                    document.getElementById("tenValue").innerHTML = ""
                 }
                 if(document.getElementById("material").value)
                 total+= parseFloat(document.getElementById("material").value)
