--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -90,7 +90,7 @@
                                                 onchange="onChangeType()"></textarea></td>
                                     </tr>
                                     <tr>
-                                        <th>النوع</th>
+                                        <th>الصنف</th>
                                         <td><select id="type" class="form-control" onchange="onChangeType()">
                                             
 
@@ -100,7 +100,7 @@
                                     </tr>
 
                                     <tr>
-                                        <th>اللون /النوع/ الاسم</th>
+                                        <th>اللون/النوع/الاسم</th>
                                         <td><input id="color" class="form-control"></textarea></td>
 
                                     </tr>
@@ -137,13 +137,13 @@
                                     
 
                                     <tr>
-                                        <th>10% فرق مقاس</th>
+                                        <th>اضافة 10% فرق مقاس</th>
                                         <td>
                                             <input class="form-check-input" type="checkbox" class="form-control" id="ten" onchange="onChange()"> <label id="tenValue"></label></checkbox> 
                                         </td>
                                     </tr>
                                     <tr>
-                                        <th>20% خدمه تفصيل</th>
+                                        <th>اضافة 20% خدمه تفصيل</th>
                                         <td>
                                             <input class="form-check-input" type="checkbox" class="form-control" id="twenty" onchange="onChange()"> <label id="twentyValue"></label></checkbox>
                                         </td>
@@ -200,8 +200,8 @@
                                     <tr>
                                         <th hidden>التاريخ</th>
                                         <th>العدد</th>
-                                        <th>النوع</th>
-                                        <th>اللون /النوع/ الاسم</th>
+                                        <th>الصنف</th>
+                                        <th>اللون/النوع/الاسم</th>
                                         <th>السعر</th>
                                         <th>10%</th>
                                         <th>20%</th>
