--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -150,7 +150,7 @@
                                     </tr>
                                  
                                     <tr>
-                                        <th>التكلفة الاضافيه للقماش</th>
+                                        <th>اضافة قيمة القماش</th>
                                         <td><input id="material" onchange="onChange()" type="number" class="form-control"></textarea></td>
 
                                     </tr>
@@ -206,7 +206,7 @@
                                         <th>10%</th>
                                         <th>20%</th>
                                         <th>المقاس</th>
-                                        <th>التكلفة الاضافيه للقماش</th>
+                                        <th>قيمة القماش</th>
                                         <th>الاجمالى</th>
                                         <th>خيارات</th>
                                     </tr>
