--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -419,6 +419,10 @@
                         document.getElementById("price").value = ""
                         document.getElementById("type").value = ""
                         document.getElementById("color").value = ""
+                        document.getElementById("tenValue").innerHTML = ""
+                        document.getElementById("twentyValue").innerHTML = ""
+                        document.getElementById("ten").checked = false
+                        document.getElementById("twenty").checked = false
                     }
                 });
 
