--- a/supplier_fatora.html
+++ b/supplier_fatora.html
@@ -101,8 +101,8 @@
                                                 <th style="font-size:12pt">اللون/النوع/الاسم</th>
                                                 
                                                 <th style="font-size:12pt">السعر</th>
-                                                <th style="font-size:12pt">+10%</th>
-                                                <th style="font-size:12pt">+20%</th>
+                                                <th style="font-size:12pt">+%10</th>
+                                                <th style="font-size:12pt">+%20</th>
                                                 
                                                 <th style="font-size:12pt">قيمة القماش</th>
                                                 <th style="font-size:12pt">الاجمالى</th>
