--- a/supplier_fatora.html
+++ b/supplier_fatora.html
@@ -105,7 +105,7 @@
                                                 <th style="font-size:12pt;text-align: center;">+ 20% خدمه تفصيل</th>
                                                 
                                                 <th style="font-size:12pt;text-align: center;">+ قيمة القماش</th>
-                                                <th style="font-size:12pt;text-align: center;">الاجمالى</th>
+                                                <th style="font-size:12pt;text-align: center;">= الاجمالى</th>
                                                 
                                             </tr>
 
